# RustContest

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.atomgit/result/: check_result.json
.github/workflows/: ci.yml
exercises/solution1/src/: count_distinct.rs  tests.rs
exercises/solution2/src/: converter.rs  tests.rs
exercises/solution3/src/: calc_logic.rs  tests.rs
exercises/solution4/src/: rec_mc.rs  tests.rs
exercises/solution5/src/: fibnacci.rs  tests.rs
src/: consts.rs  eea3_128.rs  lib.rs  main.rs  zuc128.rs
topic1/solutiont1/: Cargo.toml
topic1/solutiont1/src/: conjecture.rs  tests.rs
topic1/solutiont10/: Cargo.toml
topic1/solutiont10/src/: main.rs  zuc_encryption.rs
topic1/solutiont11/: README.md
topic1/solutiont11/src/: allocator.rs  linked_list.rs  main.rs  node.rs  order.rs  pages.rs
topic1/solutiont2/: Cargo.toml
topic1/solutiont2/src/: district.rs  tests.rs
topic1/solutiont3/src/: calc_time.rs  main.rs  tests.rs
topic1/solutiont4/: Cargo.toml  README.md  kMandarin.txt  kMandarin_8105.txt  mapping_pingyin_to_wade_giles
topic1/solutiont4/src/: main.rs  tests.rs  wade_giles_romanization.rs
topic1/solutiont5/: Cargo.toml  README.md
topic1/solutiont5/src/: date.rs  main.rs  retirement.rs  tests.rs  types.rs
topic1/solutiont6/dict/: STPhrases.txt
topic1/solutiont6/src/: main.rs  simple2traditional.rs  tests.rs
topic1/solutiont7/: 2011-08.md  Cargo.toml  README.md  administrative_division_code.txt  region.json
topic1/solutiont8/: Cargo.toml  README.md
topic1/solutiont9/: Cargo.toml
(+32 files in other folders)
